@@ -9,6 +9,7 @@ NOTE : this modified version is still under the Artistic License 2.0
 - In the wilderness of Blackwood, the add-on automatically recognizes you are in the adventure zone.
 - Updated location database for Blackwood Chapter. Leyawiin and Gideon are now recognized as cities.
 - Updated bundled LibEventHandler version to 1.2.95 (AddOnVersion: 1295).
+- Backward compatibility support for Update 29
 [LoreWear]
 - Addressed API changes regarding GameplayActorCategory.
 [IdleEmotes]
